[tool.poetry]
name = "pnwapi"
version = "0.1.0"
description = ""
authors = ["Christian <59421913+Cikmo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tortoise = "^0.1.1"
pnwkit-py = "^2.5.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
python-dotenv = "^0.21.0"
autopep8 = "^1.7.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.3.0"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
